--- a/index.html
+++ b/index.html
@@ -138,11 +138,11 @@
                     
                     <div class="icons-wrapper">
                         <div class="icon-container">
-                            <a href="www.google.com" style="text-decoration: none;"><i class="fab fa-github" ></i></a>
+                            <a href="https://Lokhyasri-Gangireddi/Portfolio" style="text-decoration: none;"><i class="fab fa-github" ></i></a>
                             <p>GitHub</p>
                         </div>
                         <div class="icon-container">
-                            <i class="fa-solid fa-arrow-up-right-from-square"></i>
+                            <a href="https://lokhyasri-gangireddi.github.io/Portfolio/"></a><i class="fa-solid fa-arrow-up-right-from-square"></i>
                             <p>Live</p>
                         </div>
                     </div>          
