--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                             <p>GitHub</p>
                         </div>
                         <div class="icon-container">
-                            <a href="https://lokhyasri-gangireddi.github.io/Portfolio/"></a><i class="fa-solid fa-arrow-up-right-from-square"></i>
+                            <a href="https://lokhyasri-gangireddi.github.io/Portfolio"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                             <p>Live</p>
                         </div>
                     </div>          
