--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                     
                     <div class="icons-wrapper">
                         <div class="icon-container">
-                            <a href="https://Lokhyasri-Gangireddi/Portfolio/" style="text-decoration: none;"><i class="fab fa-github" ></i></a>
+                            <a href="https://github.com/Lokhyasri-Gangireddi/Portfolio/" style="text-decoration: none;"><i class="fab fa-github" ></i></a>
                             <p>GitHub</p>
                         </div>
                         <div class="icon-container">
